# rs-task-manager

./: .evn.example  Cargo.toml  LICENSE  README.md
.github/workflows/: run-db-migrations.yml
db/migrations/: 20251127022048_create_tasks_table.sql  20251127231813_add_updated_at_coloumn.sql
src/: main.rs
src/queries/: create_task_query.rs  delete_task_query.rs  list_task_query.rs  mod.rs  task.rs  update_task_query.rs
src/route_utils/: api_error.rs  api_response.rs  create_json_body.rs  mod.rs
src/routes/: create_task_route.rs  delete_task_route.rs  index_route.rs  list_tasks_route.rs  mod.rs  update_task_route.rs
src/types/: db_pool_as_state.rs  mod.rs
