[package]
name = "rs-task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
sqlx = {version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid", "chrono"]}
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
